# mc_ur5e_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yaml
convex/ur5e/: base-ch.txt  forearm-ch.txt  shoulder-ch.txt  upperarm-ch.txt  wrist1-ch.txt  wrist2-ch.txt  wrist3-ch.txt
launch/: display_ur5e.launch  ur5e_upload.launch  view_robot.rviz
scripts/: convert_from_xacro_to_urdf.sh  generate_convex.sh
urdf/: ur5e.urdf
urdf/meshes/: SMC-ZP3P-50PTSF.stl  d435i_0.stl  d435i_1.stl  d435i_2.stl  d435i_3.stl  d435i_4.stl  d435i_5.stl  d435i_6.stl  d435i_7.stl
